syntax = "proto3";

package task;

service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (Task);
  rpc GetAllTasks (Empty) returns (TasksResponse);
  rpc CompleteTask (CompleteTaskRequest) returns (Task);
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  int32 created_by = 3;
}

message CompleteTaskRequest {
  int32 id = 1;
}

message Task {
  int32 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
  int32 created_by = 5;
  string created_at = 6;
}

message TasksResponse {
  repeated Task tasks = 1;
}

message Empty {}